@@ -1,0 +1,2 @@
+version=3
+http://code.google.com/p/shellinabox/source/browse/trunk/distributions/debian/shellinabox_([\d\.]+).orig.tar.gz
